CHANGES FROM VERSION 2.2-4 ARE AS FOLLOWS

  Added default NAMESPACE file to avoid note produced
  under R CMD check.

  Changed licence to GPL-3.

  Datasets are now binary .rda files instead of .R.

  Renamed doc/guide22.tex to doc/guide22.txt.

  Call to library in plot.profile2d.evd did not use
  full argument matching. Fixed.

CHANGES FROM VERSION 2.2-3 ARE AS FOLLOWS

  Removed defunct url from description file.

  Internal coding change to fpot.norm in order to
  avoid note produced under R CMD check.

CHANGES FROM VERSION 2.2-2 ARE AS FOLLOWS

  Added a Suggests field to the description file in
  order to avoid warnings under future versions of
  R CMD check.   

CHANGES FROM VERSION 2.2-1 ARE AS FOLLOWS

  Fitted objects now contain the variance covariance
  matrix, which can be accessed by the function vcov. 

  New function confint (methods confint.profile.evd and 
  confint.evd) for calculating Wald and profile 
  confidence intervals. The internal function pcint 
  has now been deleted, and plot.profile.evd no longer 
  returns profile confidence intervals invisibly. 

  The function amvnonpar now implements non-parametric
  estimators for dependence functions of extreme value 
  distributions of any dimension.

  The function amvevd now implements parametric 
  evaluation of dependence functions of logistic and
  asymmetric logistic models of any dimension.

  I have removed the bootstrap confidence intervals
  option from chiplot. This had problems with zero 
  empirical cdf estimates for some replications. A
  solution would be to use smoothed estimates, but I
  decided against implementing this.

  Argument trunc added to chiplot to control whether
  estimates are truncated at theoretical upper and
  lower bounds.

  The old interfaces to abvnonpar and amvnonpar have 
  been removed.

  I have included a CITATION file in the /inst directory
  so that typing citation("evd") returns an appropriate
  citation.
