@@ -1,5 +1,5 @@
-2a0f59a99859c3435d1d6cea9c80193d *DESCRIPTION
-eb80d4f36595e8c461d8f8685c030140 *NAMESPACE
+c9c03de1d7dfa1331ce5f5b810e906e0 *DESCRIPTION
+3068fc56c3ee0dc91ebd888d4f3049df *NAMESPACE
 b7f3e37586e4f8150be961b200ca1cc7 *R/bvdist.R
 7819bacd68c9f3306faf64ac253e04cf *R/bvfit.R
 50581e7e2dab13a0adb8f9278f7c81e2 *R/bvpot.R
@@ -11,7 +11,6 @@ ffab90c7cc4d2107efc3be10bdb87776 *R/profile.R
 f5e5df4614cb06cb4daafd9d719714a6 *R/stocproc.R
 e5093612293f42f0ac58cfb002e34f1e *R/uvdist.R
 9fb9c75fae88f42870229500132c9606 *R/uvfit.R
-e0827fce28ea76c7f1a5916b5f8d8250 *R/zzz.R
 d68cfea8b33320fd9126ea80d6319ecf *data/failure.rda
 c33081cf361744491b1acc705a79957a *data/fox.rda
 bac3d131d0e36fb5596eb14dda8b9f34 *data/lisbon.rda
@@ -27,7 +26,7 @@ ad65e71d58dfdd4fcd8545db3034638b *data/uccle.rda
 a56d450cec20b359e77fbab9f7d647ab *data/venice.rda
 6eda64b0738e56ffa35cd669779ca379 *demo/00Index
 783c22138c376e9092141f3ddbe2f4d6 *demo/soe9.R
-ddef02ed8ee03178af1d6b111ba0629c *inst/CHANGES
+1cee9c882898fffe7bac6c4320693dce *inst/CHANGES
 f5404c0b304797ca2a974e4a1160046f *inst/CITATION
 db95bbff0d8a07088b5b94ec74801dcb *inst/README
 2833c8f16a4e6c52ca86f015fafff26c *inst/demos.txt
